# Adib.AI_0.1

./: Pipfile  README.md  READMW.md  app.py  new.py  pyproject.toml  render.yaml  requirements.txt
templates/: index.html
