[project]
name = "firstapp"
version = "0.1.0"
requires-python = ">=3.10,<3.12"

dependencies = [
    "Flask==2.2.5",
    "Flask-WTF==1.1.1",
    "email-validator==1.3.1",
    "gunicorn==21.2.0",
    "flask-cors==3.0.10",
    "numpy==1.26.4",
    "sympy==1.12",
    "fuzzywuzzy==0.18.0",
    "python-Levenshtein==0.21.3",
    "python-dotenv==1.0.1"
]
